@@ -895,4 +895,27 @@ public class StringRegressionTest extends BaseTestCase {
 		
 		getConnectionWithProps(props).close();
 	}
+
+	/**
+	 * Tests fix for BUG#25047 - StringUtils.indexOfIgnoreCaseRespectQuotes() isn't
+	 * case-insensitive on the first character of the target.
+	 * 
+	 * @throws Exception if the test fails.
+	 */
+	public void testBug25047() throws Exception {
+		assertEquals(26, StringUtils.indexOfIgnoreCaseRespectQuotes(0, "insert into Test (TestID) values (?)",
+				"VALUES", '`', false));
+		assertEquals(26, StringUtils.indexOfIgnoreCaseRespectQuotes(0, "insert into Test (TestID) VALUES (?)",
+				"values", '`', false));
+		
+		assertEquals(StringUtils.indexOfIgnoreCaseRespectQuotes(0, 
+				"insert into Test (TestID) values (?)", "VALUES",'`', false),
+				StringUtils.indexOfIgnoreCaseRespectQuotes(0, 
+						"insert into Test (TestID) VALUES (?)",  "VALUES",'`', false));
+		assertEquals(StringUtils.indexOfIgnoreCaseRespectQuotes(0,  
+				"insert into Test (TestID) values (?)", "values", '`', false),
+				StringUtils.indexOfIgnoreCaseRespectQuotes(0, 
+						"insert into Test (TestID) VALUES (?)", "values", '`', false));
+	}
+	}
 }
