@@ -52,7 +52,12 @@ nn-nn-06 - Version 5.0.5
 	- Fixed BUG#25009 - Results from updates not handled correctly in 
 	  multi-statement queries, leading to erroneous "Result is from UPDATE" 
 	  exceptions.
-	    	  	  	  	   	  	   
+
+	- Fixed BUG#25047 - StringUtils.indexOfIgnoreCaseRespectQuotes() isn't
+	  case-insensitive on the first character of the target. This bug broke
+	  rewriteBatchedStatements functionality when prepared statements don't
+	  use upper-case for the VALUES clause in their statements.
+	  	    	  	  	  	   	  	   
 10-20-06 - Version 5.0.4
 
     - Fixed BUG#21379 - column names don't match metadata in cases 
